objects/Note__c.object
<CustomObject>
    <description>Used this object in creation of Binding and Non Binding templates.</description>
    <fields>
        <fullName>Approved_By_1__c</fullName>
        <label>Approved By 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By_2__c</fullName>
        <label>Approved By 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By_3__c</fullName>
        <label>Approved By 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_2_3__c</fullName>
        <formula>IF( ISBLANK(Approved_By_3__c) || ISNULL(Approved_By_3__c), Approved_By_2__c , Approved_By_3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver 2/3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_List__c</fullName>
        <label>Attachment List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_List_from_e_Design__c</fullName>
        <label>Attachment List from e-Design</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auto_Approved_By__c</fullName>
        <label>Auto Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_First_Approvar__c</fullName>
        <formula>IF(ISNULL(Auto_Approved_By__c ) || ISBLANK(Auto_Approved_By__c ), Approved_By_1__c, Auto_Approved_By__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto/First Approvar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clarifications__c</fullName>
        <label>Clarifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exclusions__c</fullName>
        <label>Exclusions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explanations__c</fullName>
        <label>Explanations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Description_from_e_Design__c</fullName>
        <label>Proposal Description from e-Design</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Notes</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote_Proposal__c</columns>
        <columns>Auto_Approved_By__c</columns>
        <columns>Approved_By_1__c</columns>
        <columns>Approved_By_2__c</columns>
        <columns>Approved_By_3__c</columns>
        <columns>Attachment_List__c</columns>
        <columns>Approver_2_3__c</columns>
        <columns>Auto_First_Approvar__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Note  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>